# assignment-3

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  lm_events_output.json
backend/: .env  .env.example  batch_prompts.jsonl  batch_result.jsonl  lm_events_output.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 021f1bdc162b_add_categories_to_users.py  0486b458645b_remove_daily_practice_unused_columns.py  04e02312343d_add_user_question_models.py  0558471914c6_add_daily_prac_strs.py  07e88ab50c98_add_composite_pk_to_pointarticleconcept.py  09a561eb1f1c_user_add_last_accessed_col.py  125e6db5e654_add_pointarticleconcept_and_.py  142d00bb070f_add_article_bookmark_table.py  1b8471e6604d_add_usage_and_tier_tables.py  22cde3c77a60_add_image_url_column.py  288fe35bd99f_add_useless_column_to_article.py  32880cfa515b_adjust_note_table.py  3475486ebd66_add_submission_id_field.py  37cf2356fe08_move_table_back.py  381abba9e9bc_add_comment_text.py  3a180289131b_add_bookmark_table.py  3b7cc72ac8de_unset_stripe_session_foreign_key.py  3c473e77f83a_add_user_password_reset_table.py  423a1e6552f0_create_article_and_event_tables.py  46c8413a6057_change_analysisconcept_to_.py  4da1d4590481_.py  4f9ec96fc98e_add_unverified_tier.py  59cef91d2fa1_add_deleted_at_datetime_column.py  5b3d1b5c303e_update_stripe_session_table.py  5d5b472013f6_add_subscription_and_stripe_session_table.py  61b03cca7e85_add_stripe_product_and_price_table.py  63af7264fba3_add_essay_rate_limit.py  651ed2d244c5_add_email_verification.py  (+49 more)
backend/src/: app.py  test.ipynb
(+355 files in other folders)
