[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.2",
    "beautifulsoup4>=4.12.3",
    "fastapi[standard]>=0.115.0",
    "sqlalchemy>=2.0.35",
    "passlib>=1.7.4",
    "python-dotenv",
    "setuptools",
    "wheel",
    "psycopg2-binary>=2.9.9",
    "email-validator>=2.2.0",
    "bcrypt>=4.2.0",
    "jwt>=1.3.1",
    "pyjwt>=2.9.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-pinecone>=0.2.0",
    "pinecone-notebooks>=0.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "alembic>=1.13.2",
    "alembic-postgresql-enum>=1.3.0",
    "pre-commit>=3.8.0",
    "mypy>=1.13.0",
]
